--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <a href="#" class="logo">Tech Support</a>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#">Projects</a></li>
                 <li><a href="#">Login/Sign In</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
@@ -18,14 +18,10 @@
             <img src="stars.png" id="stars">
             <img src="moon.png" id="moon">
             
-            <a href="#sec" id="btn">Projects</a>
+            <a href="#sec" id="btn">About Us</a>
             <img src="building.png" id="building">
             <img src="burjkhalifa.png" id="burjkhalifa">
         </section>
-        <div class="sec" id="sec">
-            <h2>Projects</h2>
-            <p>Need to develop this more <br><br> Make Projects as different panels for users to interact with</p>
-        </div>
         <script> 
             let stars = document.getElementById('stars');
             let moon = document.getElementById('moon');
