--- a/Contact.html
+++ b/Contact.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
-            <title>Contact Us</title>
+            <title>Contact Us-CSP Website</title>
         <link rel="stylesheet" type="text/css" href="Contact.css">
     </head>
 
