--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tech Support-CSP Website</title>
+        <title>Projects-CSP Website</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
