--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <a href="#" class="logo">Tech Support</a>
+            <a href="index.html" class="logo">Tech Support</a>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">About Us</a></li>
