--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <header>
             <a href="#" class="logo">Tech Support</a>
             <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="#">Login/Sign In</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="Contact.html">Contacts</a></li>
             </ul>
         </header>
         <section>
