--- a/projects.html
+++ b/projects.html
@@ -8,10 +8,10 @@
         <header>
             <a href="index.html" class="logo">Tech Support</a>
             <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="#">Login/Sign In</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="Contact.html">Contacts</a></li>
             </ul>
         </header>
 <link rel="stylesheet" type="text/css" href="Projects.css">
