--- a/About.html
+++ b/About.html
@@ -4,15 +4,27 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" contact="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About Us-CSP Website</title>'
+        <title>About Us-CSP Website</title>
         
         <link rel="stylesheet" href="About.css">
 
 
     </head>
     <body>
+        <div class="slide-container">
+            <div class="slide-content">
+                <div class="card-wrapper">
+                    <div class="card">
+                        <div class="image-content">
+                            <span class="overlay"></span>
 
-
+                            <div class="card-image"></div>
+                            <img src="riyan.png" alt="" class="card-img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 
 
