about me pg-updated

--- a/About.html
+++ b/About.html
@@ -18,8 +18,15 @@
                         <div class="image-content">
                             <span class="overlay"></span>
 
-                            <div class="card-image"></div>
-                            <img src="riyan.png" alt="" class="card-img">
+                            <div class="card-image">
+                                <img src="riyan.png" alt="" class="card-img">
+                            </div>
+                        </div>
+
+                        <div class="card-content">
+                            <h2 class="name">Riyan Anosh</h2>
+                            <p class="description">Riyan is the Webmaster and team lead. He is profecient in HTML, Python, and knows how to host a website. He enjoys playing old-school video games and hanging out with his brother, Rehan Anosh.</p>
+                            <button class="button">View More</button>
                         </div>
                     </div>
                 </div>
