--- a/index.html
+++ b/index.html
@@ -1,46 +1,101 @@
 <!doctype html>
 <html>
-    <head>
-        <title>Tech Support-CSP Website</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-        <header>
-            <a href="#" class="logo">Tech Support</a>
-            <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="#">Login/Sign In</a></li>
-                <li><a href="Contact.html">Contacts</a></li>
-            </ul>
-        </header>
-        <section>
-            <img src="stars.png" id="stars">
-            <img src="moon.png" id="moon">
-            
-            <a href="#sec" id="btn">About Us</a>
-            <img src="building.png" id="building">
-            <img src="burjkhalifa.png" id="burjkhalifa">
-        </section>
-        <script> 
-            let stars = document.getElementById('stars');
-            let moon = document.getElementById('moon');
-            let building = document.getElementById('building');
-            let text = document.getElementById('text');
-            let btn = document.getElementById('btn');
-            let burjkhalifa = document.getElementById('burjkhalifa');
-            let header = document.querySelector('header');
 
-            window.addEventListener('scroll', function (){
-                let value = window.scrollY;
-                stars.style.left = value * 0.25 + 'px';
-                moon.style.top = value * 0.27 + 'px';
-                building.style.top = value * 0.5 +'px';
-                burjkhalifa.style.top = value * 0 +'px';
-                /*text.style.marginRight = value * 0 +'px';*/
-               /* text.style.marginTop = value * 1.5 +'px';*/
-                header.style.top = value * 0.5 + 'px';
-            })
-        </script>
-    </body>
+<head>
+    <script src="https://accounts.google.com/gsi/client" async></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type='text/javascript' src='https://apis.google.com/js/platform.js' async defer></script>
+    <meta name="google-signin-client_id"
+        content="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com">
+    <title>Tech Support-CSP Website</title>
+    <script>
+        function onLoad() {
+            gapi.load('auth2', function () {
+                gapi.auth2.init();
+            });
+        }
+        window.onLoadCallback = function () {
+            gapi.auth2.init({
+                client_id: '125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com'
+            });
+        }
+    </script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+    <header>
+        <a href="#" class="logo">Tech Support</a>
+        <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li>
+                <div id="g_id_onload"
+                    data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com"
+                    data-context="signin" data-ux_mode="popup" data-callback="OnSignIn" data-auto_prompt="false">
+                </div>
+
+                <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="filled_blue"
+                    data-text="signin_with" data-size="large" data-logo_alignment="left">
+                </div>
+                <script >
+                    function OnSignIn(googleUser) {
+                        var auth2 = gapi.auth2.getAuthInstance()
+                        if (auth2.isSignedIn.get()) {
+                            var profile = auth2.currentUser.get().getBasicProfile();
+                            console.log('ID: ' + profile.getId());
+                            console.log('Full Name: ' + profile.getName());
+                            console.log('Given Name: ' + profile.getGivenName());
+                            console.log('Family Name: ' + profile.getFamilyName());
+                            console.log('Image URL: ' + profile.getImageUrl());
+                            console.log('Email: ' + profile.getEmail());
+                        }
+                    }
+                </script>
+            </li>
+            <li><a href="Contact.html">Contacts</a></li>
+            <li><a href="#" onclick="signOut();">Sign out</a>
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+                    function signOut() {
+
+                        var auth2 = gapi.auth2.getAuthInstance();
+                        auth2.signOut().then(function () {
+                            console.log('User signed out.');
+                        });
+                    }
+
+                </script>
+            </li>
+        </ul>
+    </header>
+    <section>
+        <img src="stars.png" id="stars">
+        <img src="moon.png" id="moon">
+
+        <a href="#sec" id="btn">About Us</a>
+        <img src="building.png" id="building">
+        <img src="burjkhalifa.png" id="burjkhalifa">
+    </section>
+    <script>
+        let stars = document.getElementById('stars');
+        let moon = document.getElementById('moon');
+        let building = document.getElementById('building');
+        let text = document.getElementById('text');
+        let btn = document.getElementById('btn');
+        let burjkhalifa = document.getElementById('burjkhalifa');
+        let header = document.querySelector('header');
+
+        window.addEventListener('scroll', function () {
+            let value = window.scrollY;
+            stars.style.left = value * 0.25 + 'px';
+            moon.style.top = value * 0.27 + 'px';
+            building.style.top = value * 0.5 + 'px';
+            burjkhalifa.style.top = value * 0 + 'px';
+            /*text.style.marginRight = value * 0 +'px';*/
+            /* text.style.marginTop = value * 1.5 +'px';*/
+            header.style.top = value * 0.5 + 'px';
+        })
+    </script>
+</body>
+
 </html>
