--- a/About.html
+++ b/About.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
-    <html lang="en">
+<head>
+    <title>About Us-CSP Website</title>
+    <link rel="stylesheet" type="text/css" href="About.css">
+</head>
+<body>
+    <header>
+        <a href="#" class="logo">Tech Support</a>
+        <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="#">Login/Sign In</a></li>
+            <li><a href="Contact.html">Contacts</a></li>
+        </ul>
+    </header>   
+
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" contact="IE=edge">
@@ -31,11 +46,83 @@
                             <button class="button">View More</button>
                         </div>
                     </div>
+                    <div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+
+                            <div class="card-image">
+                                <img src="rehan.png" alt="" class="card-img">
+                            </div>
+                        </div>
+
+                        <div class="card-content">
+                            <h2 class="name">Rehan Mohhamad</h2>
+                            <p class="description">Rehan is the tech support and facilitater. He knows HTML and some Python. He enjoys reading classics, such as The Three Musketeers. He aslo enjoys playing sports such as Badminton and Basketball. He is the gigachad brother of Amaan, and carries this entire team on his back.</p>
+                            <button class="button">View More</button>
+                        </div>
+                    </div><div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+
+                            <div class="card-image">
+                                <img src="amaan.png" alt="" class="card-img">
+                            </div>
+                        </div>
+
+                        <div class="card-content">
+                            <h2 class="name">Amaan Mohhamad</h2>
+                            <p class="description">Amaan is the Brother of the giga chad Rehan Mohammad and is the Back-End Developer along with being the Coordinator. He is skilled in Python HTML, Java, and Javascript. He enjoys gaming, reading literary classics, and his favorite color is blue.</p>
+                            <button class="button">View More</button>
+                        </div>
+                    </div><div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+
+                            <div class="card-image">
+                                <img src="rishan.png" alt="" class="card-img">
+                            </div>
+                        </div>
+
+                        <div class="card-content">
+                            <h2 class="name">Rishaan Joshi</h2>
+                            <p class="description">Rishaan is one of the Content Specialists and the Entertainer. He has a bad sense of humor, is rather creative, has generally good ideas, and is a movie addict. He also believes Riyan is missing a chromosome and thinks he looks better bald. He also created our team logo.</p>
+                            <button class="button">View More</button>
+                        </div>
+                    </div><div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+
+                            <div class="card-image">
+                                <img src="jason.png" alt="" class="card-img">
+                            </div>
+                        </div>
+
+                        <div class="card-content">
+                            <h2 class="name">Jason Lai</h2>
+                            <p class="description">Jason is one of the Content Specialists and the Event Planner. He is experienced in Python, HTML, Lua, and knows a little bit of Java/C/C++. He enjoys swimming, badminton, and loves the Balkans despite being Chinese. He can't read.</p>
+                            <button class="button">View More</button>
+                        </div>
+                    </div><div class="card swiper-slide">
+                        <div class="image-content">
+                            <span class="overlay"></span>
+
+                            <div class="card-image">
+                                <img src="varin.png" alt="" class="card-img">
+                            </div>
+                        </div>
+
+                        <div class="card-content">
+                            <h2 class="name">Varin Adusumalli</h2>
+                            <p class="description">Varin is the current Front-End Developer and Decorator. He is skilled in C, Python, HTML, and other languages. He enjoys the movie Intersteller, knows Muay Thai and boxing, loves football.</p>
+                            <button class="button">View More</button>
+                        </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next swiper-navBtn"></div>
+            <div class="swiper-button-prev swiper-navBtn"></div>
             <div class="swiper-pagination"></div>
 
         </div>
