put "about" instead of logo

--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Tech Support</a>
+        <a href="#" class="logo">About</a>
         <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
