fixing about page

--- a/projects.html
+++ b/projects.html
@@ -1,113 +1,115 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Projects-CSP Website</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-        <header>
-            <a href="index.html" class="logo">Tech Support</a>
-            <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="#">Login/Sign In</a></li>
-                <li><a href="Contact.html">Contacts</a></li>
-            </ul>
-        </header>
-<link rel="stylesheet" type="text/css" href="Projects.css">
-<div id="carouselExampleControls" class="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <div class="card">
-                <div class="img-wrapper"><img src="building.png" class="d-block w-100" alt="building"> </div>
-                <div class="card-body">
-                    <h5 class="card-title">Project</h5>
-                    <p class="card-text">Description</p>
-                    <a href="#" class="btn btn-primary">View</a>
+
+<head>
+    <title>Projects-CSP Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+    <header>
+        <a href="index.html" class="logo">Tech Support</a>
+        <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="#">Login/Sign In</a></li>
+            <li><a href="Contact.html">Contacts</a></li>
+        </ul>
+    </header>
+    <link rel="stylesheet" type="text/css" href="Projects.css">
+    <div id="carouselExampleControls" class="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="card">
+                    <div class="img-wrapper"><img src="building.png" class="d-block w-100" alt="building"> </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Project</h5>
+                        <p class="card-text">Description</p>
+                        <a href="#" class="btn btn-primary">View</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="carousel-item">
-            <div class="card">
-                <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                <div class="card-body">
-                    <h5 class="card-title">Project</h5>
-                    <p class="card-text">Description</p>
-                    <a href="#" class="btn btn-primary">View</a>
+            <div class="carousel-item">
+                <div class="card">
+                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Project</h5>
+                        <p class="card-text">Description</p>
+                        <a href="#" class="btn btn-primary">View</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="carousel-item">
-            <div class="card">
-                <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                <div class="card-body">
-                    <h5 class="card-title">Project</h5>
-                    <p class="card-text">Description</p>
-                    <a href="#" class="btn btn-primary">View</a>
+            <div class="carousel-item">
+                <div class="card">
+                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Project</h5>
+                        <p class="card-text">Description</p>
+                        <a href="#" class="btn btn-primary">View</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="carousel-item">
-            <div class="card">
-                <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                <div class="card-body">
-                    <h5 class="card-title">Project</h5>
-                    <p class="card-text">Description</p>
-                    <a href="#" class="btn btn-primary">View</a>
+            <div class="carousel-item">
+                <div class="card">
+                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Project</h5>
+                        <p class="card-text">Description</p>
+                        <a href="#" class="btn btn-primary">View</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="carousel-item">
-            <div class="card">
-                <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                <div class="card-body">
-                    <h5 class="card-title">Project</h5>
-                    <p class="card-text">Description</p>
-                    <a href="#" class="btn btn-primary">View</a>
+            <div class="carousel-item">
+                <div class="card">
+                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Project</h5>
+                        <p class="card-text">Description</p>
+                        <a href="#" class="btn btn-primary">View</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="carousel-item">
-            <div class="card">
-                <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                <div class="card-body">
-                    <h5 class="card-title">Project</h5>
-                    <p class="card-text">Description</p>
-                    <a href="#" class="btn btn-primary">View</a>
+            <div class="carousel-item">
+                <div class="card">
+                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Project</h5>
+                        <p class="card-text">Description</p>
+                        <a href="#" class="btn btn-primary">View</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="carousel-item">
-            <div class="card">
-                <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                <div class="card-body">
-                    <h5 class="card-title">Project</h5>
-                    <p class="card-text">Description</p>
-                    <a href="#" class="btn btn-primary">View</a>
+            <div class="carousel-item">
+                <div class="card">
+                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Project</h5>
+                        <p class="card-text">Description</p>
+                        <a href="#" class="btn btn-primary">View</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="carousel-item">
-            <div class="card">
-                <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                <div class="card-body">
-                    <h5 class="card-title">Project</h5>
-                    <p class="card-text">Description</p>
-                    <a href="#" class="btn btn-primary">View</a>
+            <div class="carousel-item">
+                <div class="card">
+                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Project</h5>
+                        <p class="card-text">Description</p>
+                        <a href="#" class="btn btn-primary">View</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="carousel-item">
-            <div class="card">
-                <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
-                <div class="card-body">
-                    <h5 class="card-title">Project</h5>
-                    <p class="card-text">Description</p>
-                    <a href="#" class="btn btn-primary">View</a>
+            <div class="carousel-item">
+                <div class="card">
+                    <div class="img-wrapper"><img src="..." class="d-block w-100" alt="..."> </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Project</h5>
+                        <p class="card-text">Description</p>
+                        <a href="#" class="btn btn-primary">View</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-    
-    
+    <canvas id="webgl"></canvas>
+    <script type="module" src="/three.js"></script>
