--- a/About.html
+++ b/About.html
@@ -65,7 +65,7 @@
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="amaan.png" alt="" class="card-img">
+                                <img src="Amaan2.jpg" alt="" class="card-img">
                             </div>
                         </div>
 
