--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
                             <div class="card-content">
                                 <h2 class="name">Riyan Anosh</h2>
                                 <p class="description">Riyan is the Webmaster and team lead. He is profecient in HTML, Python, and knows how to host a website. He enjoys playing old-school video games and hanging out with his brother, Rehan Anosh.</p>
-                                <button class="button">View More</button>
+                                <a href="Aboutriyan.html.html"class="button">View More</a>
+                                
                             </div>
                         </div>
                         <div class="card swiper-slide">
