--- a/projects.html
+++ b/projects.html
@@ -134,7 +134,7 @@
                 });
             }
         </script>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style2.css">
     </head>
     
     
