--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     function OnSignIn() {
                        var minor = gapi.auth2.getAuthInstance()
                        if(minor = true){
-                        var token_id = gapi.auth2.AuthResponse()
+                        console.log('Signed In')
                        }
                       }
 
