--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li>
+                <a href="#" onclick="signOut();">Leave</a>
+                <script>
+                    function signOut() {
+                        gapi.auth2.getAuthInstance().signOut().then(function () {
+                            var gIdSignInElements = document.getElementsByClassName('g_id_signin'); 
+                            console.log('User signed out.');
+                            for (var i = 0; i < gIdSignInElements.length; i++) {
+                                gIdSignInElements[i].style.visibility = 'collapse';
+                            }
+                        });
+                    }
+
+                </script>
+            </li>
+            <li><a href="Contact.html">Contacts</a></li>
+            <li>
                 <div id="g_id_onload"
                     data-client_id="125257763090-p5800112ordnelpe23i2lbkavunsv5vq.apps.googleusercontent.com"
                     data-context="signin" data-ux_mode="popup" data-callback="OnSignIn" data-auto_prompt="false">
@@ -42,32 +58,26 @@
                     function OnSignIn(googleUser) {
                         var authInstance = gapi.auth2.getAuthInstance();
                         if (authInstance.isSignedIn.get()) {
+                            document.getElementById('g_id_onload').style.visibility = 'hidden'
                             // The user is signed in
                             var id_token = authInstance.currentUser.get().getAuthResponse().id_token;
                             console.log(id_token)
-                            function parseJwt (token) {
+                            function parseJwt(token) {
                                 var base64Url = token.split('.')[1];
                                 var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-                                var jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function(c) {
+                                var jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function (c) {
                                     return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
                                 }).join(''));
-                            
+
                                 return JSON.parse(jsonPayload);
                             }
                             console.log(parseJwt(id_token));
+                            var gIdSignInElements = document.getElementsByClassName('g_id_signin');
+                            for (var i = 0; i < gIdSignInElements.length; i++) {
+                                gIdSignInElements[i].style.visibility = 'collapse';
+                            }
                         }
                     }
-                </script>
-            </li>
-            <li><a href="Contact.html">Contacts</a></li>
-            <li><a href="#" onclick="signOut();">Sign out</a>
-                <script>
-                    function signOut() {
-                        gapi.auth2.getAuthInstance().signOut().then(function () {
-                            console.log('User signed out.');
-                        });
-                    }
-
                 </script>
             </li>
         </ul>
