--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <img src="moon.png" id="moon">
 
         <a href="#sec" id="btn">About Us</a>
-        <img src="building.png" id="building">
+        <img src="buildings2.png" id="building">
         <img src="Robot_3.png" id="robots">
     </section>
     <script>
@@ -101,7 +101,7 @@
 
         window.addEventListener('scroll', function () {
             let value = window.scrollY;
-            boom.style.top = value * 0.25 + 'px';
+            boom.style.top = value * 0.70 + 'px';
             moon.style.top = value * 0.27 + 'px';
             building.style.top = value * 0.5 + 'px';
             robots.style.top = value * 0 + 'px';
