--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
         </ul>
     </header>
     <section>
-        <img src="boom booms.png" id="boom">
+        <img src="stars.png" id="boom">
         <img src="moon.png" id="moon">
 
         <a href="#sec" id="btn">About Us</a>
-        <img src="buildings2.png" id="building">
-        <img src="Robot_3.png" id="robots">
+        <img src="building.png" id="building">
+        <img src="burjkhalifa.png" id="robots">
     </section>
     <script>
         let boom = document.getElementById('boom');
@@ -101,9 +101,9 @@
 
         window.addEventListener('scroll', function () {
             let value = window.scrollY;
-            boom.style.top = value * 0.70 + 'px';
+            boom.style.right = value * 0.70 + 'px';
             moon.style.top = value * 0.27 + 'px';
-            building.style.top = value * 0.5 + 'px';
+            building.style.top = value * 0.40 + 'px';
             robots.style.top = value * 0 + 'px';
             /*text.style.marginRight = value * 0 +'px';*/
             /* text.style.marginTop = value * 1.5 +'px';*/
@@ -139,14 +139,14 @@
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="rehan.png" alt="" class="card-img">
+                                <img src="Rehan2.jpg" alt="" class="card-img">
                             </div>
                         </div>
 
                         <div class="card-content">
                             <h2 class="name">Rehan Mohhamad</h2>
                             <p class="description">Rehan is the tech support and facilitater. He knows HTML and some
-                                Python. He enjoys reading classics, such as The Three Musketeers. He aslo enjoys playing
+                                Python. He enjoys reading classics, such as The Three Musketeers. He also enjoys playing
                                 sports such as Badminton and Basketball. He is the gigachad brother of Amaan, and
                                 carries this entire team on his back.</p>
                             <button class="button">View More</button>
@@ -175,7 +175,7 @@
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="rishan.png" alt="" class="card-img">
+                                <img src="Rishaan3.jpeg" alt="" class="card-img">
                             </div>
                         </div>
 
@@ -210,7 +210,7 @@
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="varin.png" alt="" class="card-img">
+                                <img src="varin2.png" alt="" class="card-img">
                             </div>
                         </div>
 
