--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <title>Tech Support-CSP Website</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script>
-        let signinbutton = document.getElementById('sign_out')
-        signinbutton.style.display = 'none';
         function initGoogleAuth() {
             gapi.load('auth2', function () {
                 gapi.auth2.init({
@@ -26,8 +24,8 @@
 </head>
 
 <body onload="initGoogleAuth()
-let signinbutton = document.getElementById('sign_out')
-signinbutton.style.display = 'none';">
+let siginbutton = document.getElementById('sign_out')
+signinbutton.style.display = 'none'">
     <header>
         <a href="#" class="logo">Tech Support</a>
         <ul>
@@ -62,8 +60,8 @@ signinbutton.style.display = 'none';">
                             for (var i = 0; i < gIdSignInElements.length; i++) {
                                 gIdSignInElements[i].style.visibility = 'collapse';
                             }
-                            let signinbutton = document.getElementById('sign_out')
-                            signinbutton.style.display = 'flex'
+                            let siginbutton = document.getElementById('sign_out')
+                            siginbutton.style.display = 'none'
                         }
                     }
                 </script>
