--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     </script>
 </head>
 
-<body onload="initGoogleAuth()
-let siginbutton = document.getElementById('sign_out')
-signinbutton.style.display = 'none'">
+<body onload="initGoogleAuth()">
     <header>
         <a href="#" class="logo">Tech Support</a>
         <ul>
