--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ signinbutton.style.display = 'none';">
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="riyan.png" alt="" class="card-img">
+                                <img src="RIYAN2.jpg" alt="" class="card-img">
                             </div>
                         </div>
 
@@ -201,7 +201,7 @@ signinbutton.style.display = 'none';">
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="jason.png" alt="" class="card-img">
+                                <img src="jason2..jpg" alt="" class="card-img">
                             </div>
                         </div>
 
@@ -218,7 +218,7 @@ signinbutton.style.display = 'none';">
                             <span class="overlay"></span>
 
                             <div class="card-image">
-                                <img src="varin2.png" alt="" class="card-img">
+                                <img src="VARIN.png" alt="" class="card-img">
                             </div>
                         </div>
 
