--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 data-context="signin"
                 data-ux_mode="popup"
                 data-callback="OnSignIn"
-                data-itp_support="true">
+                data-auto_prompt="false">
            </div>
            
            <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="filled_blue"
